force-app/main/default/objects/Relief_Resource__c/Relief_Resource__c.object-meta.xml
<CustomObject>
    <description>Available relief inventory across warehouses, donors and partner organizations.</description>
    <label>Relief Resource</label>
    <nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relief Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>