force-app/main/default/objects/Relief_Resource__c/fields/Available_To_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Available_To_Allocate__c</fullName>
    <formula>Quantity_Available__c -  Reserved_Quantity__c -  Safety_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available To Allocate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>