force-app/main/default/objects/Relief_Resource__c/fields/Last_Inventory_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Inventory_Update__c</fullName>
    <label>Last Inventory Update</label>
    <type>DateTime</type>
</CustomField>