force-app/main/default/objects/Relief_Resource__c/fields/Owner_Organization__c.field-meta.xml
<CustomField>
    <fullName>Owner_Organization__c</fullName>
    <label>Owner Organization</label>
    <length>120</length>
    <type>Text</type>
</CustomField>