force-app/main/default/objects/Relief_Resource__c/fields/Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>Safety_Stock__c</fullName>
    <label>Safety Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>