force-app/main/default/objects/Relief_Resource__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Relief Resources</relationshipLabel>
    <relationshipName>Relief_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>